# token-client-poc

./: .gitignore  Dockerfile  README.md  auth_config.py  callback_config.py  client_secrets.txt  config.py  constants.py  database_connection.py  docker-compose.yml  global_variables.py  init_call.py  init_token_call.http  insert_test_data.py  load_callback_config.py  load_callback_configs.py  main.py  mock_secret_client.py  mock_token_client.py  notes.txt  pyproject.toml  refresh_token_call.http  scheduled_callback.py  secret_client_wrapper.py  spreader.py  timewheel.py  timewheel_config.py
.deploy/: create_container_registry.sh  create_core.sh  create_postgresql.sh  create_role_assignments.sh  create_uami_role_assignment.sh  create_uamis.sh  create_vnet.sh  quick.txt
.deploy/bicep/: assign_roles.bicep  container_apps.bicep  container_apps_environment.bicep  container_registry.bicep  log_analytics_workspace.bicep  main.bicep  postgresql.bicep  uami.bicep  uami_assign_roles.bicep  virtual_network.bicep
.github/: cd-development.yaml  cd-production.yaml  cd-staging.yaml  ci-development.yaml
app/: main.py
app/src/: load_callback_configs.py  main.py  scheduled_callback.py  timewheel.py
